--- a/Bemobile/Base.lproj/MainStoryboard.storyboard
+++ b/Bemobile/Base.lproj/MainStoryboard.storyboard
@@ -23,7 +23,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cCX-zs-j9x">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GoliathNationalBankLogo" translatesAutoresizingMaskIntoConstraints="NO" id="zhf-ci-BWW">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GNB" translatesAutoresizingMaskIntoConstraints="NO" id="zhf-ci-BWW">
                                         <rect key="frame" x="0.0" y="8" width="414" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="6ud-ts-tWO"/>
@@ -358,6 +358,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="GoliathNationalBankLogo" width="2014" height="839"/>
+        <image name="GNB" width="2014" height="839"/>
     </resources>
 </document>
